[package]
name = "shib-gotham"
version = "0.1.0"
authors = ["Shaun Mangelsdorf <s.mangelsdorf@gmail.com>",
           "Bradley Beddoes <bradleybeddoes@gmail.com>"]

[dependencies]
log = "0.3.0"
futures = "0.1.0"
hyper = "0.11.0"
gotham = { git = "https://github.com/gotham-rs/gotham" }
gotham_derive = { git = "https://github.com/gotham-rs/gotham" }
serde = "1.0"
percent-encoding = "1.0"

[dev-dependencies]
tokio-core = "0.1"
serde_derive = "1.0"
serde_bytes = "0.10"
mime = "*"
fern = "*"
chrono = "*"
