[package]
name = "shib-gotham"
version = "0.2.1"
authors = ["Shaun Mangelsdorf <s.mangelsdorf@gmail.com>",
           "Bradley Beddoes <bradleybeddoes@gmail.com>"]

[dependencies]
log = "0.4.14"
futures = "0.1"
hyper = "0.11"
serde = "1.0"
serde_derive = "1.0"
percent-encoding = "1.0.1"
gotham = "0.2.1"
gotham_derive = "0.2.1"

[dev-dependencies]
tokio-core = "0.1"
serde_bytes = "0.11.5"
mime = "*"
fern = "*"
chrono = "*"

[patch.crates-io]
gotham = { git = "https://github.com/gotham-rs/gotham", tag = "0.2.1"  }
gotham_derive = { git = "https://github.com/gotham-rs/gotham", tag = "0.2.1"  }